--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container-lg px-5">
-      <!-- Use class for "past", "present", and "future" to apply styles to the
+      <!-- Use class for "past", "", and "future" to apply styles to the
         time-block divs accordingly. The javascript will need to do this by
         adding/removing these classes on each div by comparing the hour in the
         id to the current hour. The html provided below is meant to be an example
@@ -40,7 +40,7 @@
         -->
 
       <!-- Example of a past time block. The "past" class adds a gray background color. -->
-      <div id="hour-9" class="row time-block past">
+      <div id="hour-9" class="row time-block ">
         <div class="col-2 col-md-1 hour text-center py-3">9AM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -48,8 +48,8 @@
         </button>
       </div>
 
-      <!-- Example of a a present time block. The "present" class adds a red background color. -->
-      <div id="hour-10" class="row time-block present">
+      <!-- Example of a a  time block. The "" class adds a red background color. -->
+      <div id="hour-10" class="row time-block ">
         <div class="col-2 col-md-1 hour text-center py-3">10AM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -58,7 +58,7 @@
       </div>
 
       <!-- Example of a future time block. The "future" class adds a green background color. -->
-      <div id="hour-11" class="row time-block future">
+      <div id="hour-11" class="row time-block ">
         <div class="col-2 col-md-1 hour text-center py-3">11AM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -67,7 +67,7 @@
       </div>
 
 
-      <div id="hour-12" class="row time-block present">
+      <div id="hour-12" class="row time-block ">
         <div class="col-2 col-md-1 hour text-center py-3">12PM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -76,7 +76,7 @@
       </div>
 
 
-            <div id="hour-13" class="row time-block present">
+            <div id="hour-13" class="row time-block ">
         <div class="col-2 col-md-1 hour text-center py-3">1PM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -86,7 +86,7 @@
 
 
 
-               <div id="hour-14" class="row time-block present">
+               <div id="hour-14" class="row time-block ">
         <div class="col-2 col-md-1 hour text-center py-3">2PM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -95,7 +95,7 @@
       </div>
 
 
-             <div id="hour-15" class="row time-block present">
+             <div id="hour-15" class="row time-block ">
         <div class="col-2 col-md-1 hour text-center py-3">3PM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -104,7 +104,7 @@
       </div>
 
 
-               <div id="hour-16" class="row time-block present">
+               <div id="hour-16" class="row time-block ">
         <div class="col-2 col-md-1 hour text-center py-3">4PM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -114,7 +114,7 @@
 
 
       
-               <div id="hour-17" class="row time-block present">
+               <div id="hour-17" class="row time-block ">
         <div class="col-2 col-md-1 hour text-center py-3">5PM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -122,7 +122,7 @@
         </button>
       </div>
 
-                <div id="hour-18" class="row time-block present">
+                <div id="hour-18" class="row time-block ">
         <div class="col-2 col-md-1 hour text-center py-3">6PM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -131,7 +131,7 @@
       </div>
 
 
-     <div id="hour-19" class="row time-block present">
+     <div id="hour-19" class="row time-block ">
         <div class="col-2 col-md-1 hour text-center py-3">7PM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -141,7 +141,7 @@
 
 
 
-                <div id="hour-20" class="row time-block present">
+                <div id="hour-20" class="row time-block ">
         <div class="col-2 col-md-1 hour text-center py-3">8PM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -149,7 +149,7 @@
         </button>
       </div>
 
-            <div id="hour-21" class="row time-block present">
+            <div id="hour-21" class="row time-block ">
         <div class="col-2 col-md-1 hour text-center py-3">9PM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -157,7 +157,7 @@
         </button>
       </div>
 
-           <div id="hour-22" class="row time-block present">
+           <div id="hour-22" class="row time-block ">
         <div class="col-2 col-md-1 hour text-center py-3">10PM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -167,7 +167,7 @@
 
 
       
-           <div id="hour-23" class="row time-block present">
+           <div id="hour-23" class="row time-block ">
         <div class="col-2 col-md-1 hour text-center py-3">11PM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -175,7 +175,7 @@
         </button>
       </div>
 
-              <div id="hour-24" class="row time-block present">
+              <div id="hour-24" class="row time-block ">
         <div class="col-2 col-md-1 hour text-center py-3">12AM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
